<resources>
<!--<string name="app_name">Yajmana</string>-->
    <string name="app_name">वंशावळ</string>
    <string name="action_settings">Settings</string>
    <string name="login_btn">Login</string>
    <string name="login_head">नमस्कार, आपले स्वागत आहे.</string>
    <string name="uname_hint">Your Username</string>
    <string name="password_hint">Your Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="vanshawal_heading">Vanshawal</string>
    <string name="title_activity_navigate">NavigateActivity</string>
    <string name="empty_text">कोणतीही रेकॉर्ड सापडली नाही.</string>
    <string name="title_home">यादी</string>
    <string name="title_feedback">अभिप्राय</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_broadcast">ब्रॉडकास्ट</string>
    <string name="title_profile">Profile</string>
    <string name="splash_screen_text">Splash Screen</string>
    <string name="vanshawal_no_hint">वंशावळ क्रमांक टाका.</string>

    <!--  Profile -->
    <string name="profile_heading">प्रोफाइल</string>
    <string name="profile_name">नाव</string>
    <string name="profile_mobile_no">मोबाइल नं</string>
    <string name="profile_email">ई-मेल</string>
    <string name="profile_close">बाहेर</string>
    <string name="adhikar_patre_1">अधिकार पत्र क्र.१</string>
    <string name="adhikar_patre_2">अधिकार पत्र क्र.२</string>
    <string name="adhikar_patre_3">अधिकार पत्र क्र.३</string>
    <string name="profile_name_value">चिन्मय माधव देव</string>
    <string name="first_name_value">चिन्मय</string>
    <string name="middle_name_value">माधव</string>
    <string name="last_name_value">देव</string>
    <string name="mobile_no_value">9823052708</string>
    <string name="email_value">abc@gmail.com</string>
    <string name="profile_img_desc">Profile Pic</string>
    <string name="edit_profile_heading">प्रोफाइलच्या माहितीमध्ये बदल करणे</string>
    <string name="edit_profile_success_message">प्रोफाइलमधील माहिती बदल सफल.</string>
    <string name="edit_profile_failure_message">प्रोफाइलमधील माहिती बदल असफल.</string>

    <string name="district">जिल्हा</string>
    <string name="taluka">तालुका</string>
    <string name="city">City</string>
    <string name="yajman_s_full_name">Yajman\'s Full Name</string>
    <string name="caste">समाज</string>
    <string name="date_of_death">स्मृती दिन (dd–mm–yyyy)</string> <!-- (d–m–yyyy) -->
    <string name="mobile_no">मोबाइल नं.</string>
    <string name="mobile_no_label">मोबाइल क्र.</string>
    <string name="person_s_photo">Person\'s Photo</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_label">पूर्ण नाव </string><!-- (नाव वडीलांचे-नाव आडनाव) -->
    <string name="city_label">गाव</string>
    <string name="taluka_lable">तालुका</string>
    <string name="district_label">जिल्हा</string>
    <string name="caste_label">समाज</string>
    <string name="date_of_death_label">स्मृती दिन</string>
    <string name="relation_label">तुमच्याशी नाते</string>
    <string name="relation">स्वर्गवासी व्यक्तीचे तुमच्यासोबत नाते</string>
    <string name="vanshawal_no_label">वंशावळ क्र.</string>
    <string name="vanshahwal_no">123456</string>
    <string name="swa_vyaktichi_mahiti">स्वर्गवासी व्यक्तीची माहिती</string>
    <string name="pooja_person_names_label">पूजेला बसलेल्या व्यक्तींची माहिती अथवा वंशावळ</string>
    <string name="add_button_tip">एकापेक्षा जास्त नातेवाईक असल्यास \'+\' बटणाचा वापर करा.</string>
    <string name="mothers_full_name">आईचे पूर्ण नाव</string>
    <string name="fathers_full_name">वडिलांचे पूर्ण नाव</string>
    <string name="your_full_name_label">तुमचे पूर्ण नाव</string>
    <string name="grandpa_name">आजोबा</string>
    <string name="panjoba_name">पणजोबा</string>
    <string name="ni_panjoba_name">नीपणजोबा</string>
    <string name="real_uncle_name">सख्या काकांचे नाव</string>
    <string name="real_uncle_name_plus">सख्या काकांचे नाव +</string>
    <string name="cousin_uncle_name">चुलत काकांचे नाव</string>
    <string name="cousin_uncle_name_plus">चुलत काकांचे नाव +</string>
    <string name="real_uncle_son_name">सख्या काकांच्या मुलाचे नाव</string>
    <string name="real_uncle_son_name_plus">सख्या काकांच्या मुलाचे नाव +</string>
    <string name="cousin_uncle_son_name">चुलत काकांच्या मुलाचे नाव</string>
    <string name="cousin_uncle_son_name_plus">चुलत काकांच्या मुलाचे नाव +</string>
    <string name="real_brother_name">सख्या भावाचे नाव</string>
    <string name="real_brother_name_plus">सख्या भावाचे नाव +</string>
    <string name="real_brother_son_name">भावाच्या मुलाचे नाव</string>
    <string name="real_brother_son_name_plus">भावाच्या मुलाचे नाव +</string>
    <string name="son_name">तुमच्या मुलाचे नाव</string>
    <string name="son_name_plus">तुमच्या मुलाचे नाव +</string>
    <string name="tip">टीप</string>
    <string name="signature">सही</string>
    <string name="add">Add</string>
<!--    <string name="cancel">Cancel</string>-->
    <string name="chinmay">chinmay</string>
    <string name="vanshawal_list">वंशावळ यादी</string>
    <string name="yajmana_detail_info">संपूर्ण माहिती</string>

    <!-- TODO: Search and Filter -->
    <string name="search">शोधा</string>
    <string name="search_fragment">शोधा - प्रगत फिल्टर</string>
    <string name="first_name">स्व.व्यक्तीचे नाव</string>
    <string name="middle_name">मधले नाव</string>
    <string name="last_name">आडनाव</string>
    <string name="cancelSearch">रद्द करा</string>
    <string name="search_validation_msg">किमान एक माहिती भरणे आवश्यक.</string>
    <string name="search_result_heading">शोध परिणाम</string>
    <string name="add_more"> + </string>
    <string name="profile_save">जतन करा</string>
    <string name="edit_profile">Edit Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="letterheadtitle">Letter Head Title</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Feedback -->
    <string name="feedback_heading">यजमानांचे अभिप्राय</string>
    <string name="new_feedback">अभिप्राय द्या</string>
    <string name="feedback_name_label">तुमचे पूर्ण नाव</string>
    <string name="feedback_content_hint">अभिप्राय संदेश लिहा.</string>
    <string name="save">जमा करा</string>
    <string name="cancel">रद्द करा</string>
    <string name="vanshawal_no_validation">वंशावळ क्रमांक आवश्यक.</string>
    <string name="more">तपशील</string>
    <string name="feedback_added">अभिप्राय जमा. धन्यवाद.</string>
    <string name="feedback_not_added">अभिप्राय असफल. पुन्हा प्रयत्न करा.</string>
    <string name="saveSignature">Save</string>
    <string name="clearSignature">सही पुसा</string>
    <string name="letterHeadOne">अधिकार पत्र १</string>
    <string name="letterHeadTwo">अधिकार पत्र २</string>
    <string name="letterHeadThree">अधिकार पत्र ३</string>
    <string name="edit">संपादन</string>
    <string name="feedback">अभिप्राय</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fathers_name">वडीलांचे नाव</string>
    <string name="update">Update</string>
    <string name="male">पुरुष</string>
    <string name="female">स्त्री</string>
    <string name="advanced_search">प्रगत फिल्टर</string>
    <string name="gender">लिंग</string>
    <string name="gender_hint">स्त्री / पुरुष</string>
    <string name="relative_details">नातेवाईकांविषयी माहिती</string>
    <string name="female_string">स्त्री</string>
    <string name="logout">लॉग आऊट</string>
    <string name="feedback_content_validation">अभिप्राय संदेश आवश्यक.</string>
    <string name="death_anniverary_msg">वैध तारीख प्रविष्ट करा.</string>
    <string name="valid_mobile_no_msg">१० अंकी मोबाईल क्र. प्रविष्ट करा.</string>
    <string name="close">मागे</string>
    <string name="taluka_label">तालुका</string>
</resources>