<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/vanshawal_no_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:text="@string/vanshawal_no_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vanshawal_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vanshawal_no_label"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:text="@string/vanshahwal_no" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_below="@+id/vanshawal_no"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/person_s_photo"
                android:padding="4dp"
                android:background="@drawable/person_male" />

            <TextView
                android:id="@+id/full_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/full_name_label"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/full_name_label"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/yajman_s_full_name" />

            <TextView
                android:id="@+id/city_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/full_name"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/city_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/city_lable"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/city_label"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/taluka_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/full_name"
                android:layout_marginStart="140dp"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/taluka_lable"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/taluka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/taluka_lable"
                android:layout_marginStart="140dp"
                android:layout_marginLeft="140dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/taluka" />

            <TextView
                android:id="@+id/district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/district_lable"
                android:layout_marginStart="250dp"
                android:layout_marginLeft="250dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/district" />

            <TextView
                android:id="@+id/district_lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/full_name"
                android:layout_marginStart="250dp"
                android:layout_marginLeft="250dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/district_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/caste_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/caste_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/caste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/caste_label"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/caste_label" />

            <TextView
                android:id="@+id/death_anniversary_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city"
                android:layout_marginStart="140dp"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/date_of_death_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/death_anniversary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/death_anniversary_label"
                android:layout_marginStart="140dp"
                android:layout_marginLeft="140dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/date_of_death" />

            <TextView
                android:id="@+id/relation_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/city"
                android:layout_marginStart="250dp"
                android:layout_marginLeft="250dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/mobile_no_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/relation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relation_label"
                android:layout_marginStart="250dp"
                android:layout_marginLeft="250dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/mobile_no" />

            <Button
                android:id="@+id/btnDetail"
                style="@android:style/Widget.Material.Light.Button.Small"
                android:backgroundTint="@android:color/holo_green_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/taluka"
                android:layout_marginStart="370dp"
                android:layout_marginLeft="370dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/more"
                tools:targetApi="lollipop"/>

            <Button
                android:id="@+id/btnEdit"
                style="@android:style/Widget.Material.Light.Button.Small"
                android:backgroundTint="@color/primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/taluka"
                android:layout_marginStart="510dp"
                android:layout_marginLeft="510dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/edit"
                tools:targetApi="lollipop"/>

            <Button
                android:id="@+id/btnFeedback"
                style="@android:style/Widget.Material.Light.Button.Small"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/full_name"
                android:layout_marginStart="370dp"
                android:layout_marginLeft="370dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/feedback"
                tools:targetApi="lollipop"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>